# theavocadovms

./: LICENSE  Makefile  Readme.md  clear.bat  common.mk  dllprepare.bat  maclink.sh  rellang.bat  relwin32.bat  relwin64.bat  rules-macos.mk  rules-pi3.mk  rules.mk
client/: Makefile  clear.bat
client/darkstyle/: style.qss
client/prj_linux/: veclient.pri  veclient.pro
client/prj_win32/: veclient.rc  veclient.sln  veclient.vcxproj  veclient.vcxproj.filters
client/setting/: vschdfsrecord.cpp  vschdfsrecord.h  vscminingsetting.cpp  vscminingsetting.h  vscrtsprtp.cpp  vscrtsprtp.h  vscsetting.cpp  vscsetting.h  vscvideosetting.cpp  vscvideosetting.h
doc/: coderule.txt  linux-build  macosbuild  rasp3-build  win32build
doc/translations/: opencvr-translations.xlsx  opencvr_ko.qph
include/config/: conf.hpp  confver.hpp  linkproto.pb.h  linksystem.pb.cc  linksystem.pb.h  vidconf.pb.cc  vidconf.pb.h
modules/: readme.txt
onvif/: Makefile  Readme.md
onvif/doc/: avocadoonvif.pptx
onvif/include/: onvifclidis.hpp
onvif/onvifagent/: Makefile  Readme
onvif/src/: onvifagentlib.cpp
output/linux/: gencertificate.sh
output/windows/: gencertificate.bat  regservice.bat  regservice64.bat  unregservice.bat  unregservice64.bat
prj_win32/: theavocadovms.sln
scripts/: dllclear.bat  dllprepare-client-win32.bat  dllprepare-client-x64.bat  dllprepare-vecvr-win32.bat  dllprepare-vecvr-x64.bat  prjclear.bat
vecvr/: Makefile
vecvr/main/: main.cpp  mediaserver.cpp  mediaserver.hpp  vscmainwindows.qrc  webserver.cpp  webserver.hpp
vecvr/prj_linux/: Makefile  vecvr.pri  vecvr.pro
vecvr/prj_win32/: vecvr.rc  vecvr.sln  vecvr.vcxproj  vecvr.vcxproj.filters
vecvr/src/ZLToolKit/: CMakeLists.txt  CMakeLists.txt.bak  README.md  README.md.bak
vecvr/src/ZLToolKit/src/Network/: Socket.cpp  Socket.h  TcpClient.h  TcpLimitedSession.h  TcpServer.h  sockutil.cpp  sockutil.h
vecvr/src/ZLToolKit/src/Poller/: EventPoller.cpp  EventPoller.h  Pipe.cpp
vecvr/src/ZLToolKit/src/Thread/: AsyncTaskThread.cpp  TaskQueue.h  ThreadPool.h  semaphore.h  threadgroup.h
vecvr/src/ZLToolKit/src/Util/: File.cpp  File.cpp.bak  File.h  RingBuffer.h  SSLBox.h  SqlConnection.h  SqlPool.h  TimeTicker.h  function_traits.h
vecvr/src/ZLToolKit/tests/: test_asyncTaskThrad.cpp  test_eventPoller.cpp  test_noticeCenter.cpp  test_pipe.cpp  test_resourcePool.cpp  test_ringBuffer.cpp  test_rwmutex.cpp  test_semaphore.cpp  test_spin_mutex.cpp  test_sql.cpp  test_ssl.cpp  test_tcpClient.cpp  test_tcpEchoServer.cpp  test_threadPool.cpp  test_udpSock.cpp
velib/: Makefile
velib/prj_win32/: velib.sln  velib.vcxproj  velib.vcxproj.filters
velib/velibdemo/: main.cpp  velibdemo.cpp  velibdemo.h  velibdemo.qrc  velibdemo.sln  velibdemo.ui  velibdemo.vcxproj  velibdemo.vcxproj.filters
veuilib/: Makefile  Readme
veuilib/include/: simplecrypt.hpp  vevent.hpp  vrtspserver.hpp  vscloading.hpp  vscvideowall.h  vscvwidget.h  vtaskmgr.hpp  vvidpbwall.h
veuilib/prj_linux/: veuilib.pri
veuilib/prj_win32/: veuilib.sln  veuilib.vcxproj  veuilib.vcxproj.filters
xcmnlib/: Makefile
(+519 files in other folders)
